Added montsrerrat and quicksand fonts

--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -6,4 +6,6 @@ html
     meta(name='keywords' content='colors, types')
     meta(name='description' content='Colors and types')
     title Colors and type
+    link(rel='stylesheet' href='main.sass')
   body
+    H1 Hello, world!
