transported fonts to another dir, start working on colors and types: block colors

--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -8,4 +8,8 @@ html
     title Colors and type
     link(rel='stylesheet' href='main.sass')
   body
-    H1 Hello, world!
+    include ../components/color-intro/color-intro.pug
+    
+    h1 Hello, world!
+    
+    
