--- a/src/pages/main.sass
+++ b/src/pages/main.sass
@@ -1,25 +1,32 @@
+//Подключение шрифтов
 @font-face 
   font-family:"Quicksand" 
-  src: url("../components/fonts/quicksand/Quicksand-Bold.woff") format("woff")
-  src: url("../components/fonts/quicksand/Quicksand-Bold.ttf") format("truetype")
-  src: url("../components/fonts/quicksand/Quicksand-Bold.svg") format("svg")
+  src: url("../fonts/quicksand/Quicksand-Bold.woff") format("woff")
+  src: url("../fonts/quicksand/Quicksand-Bold.ttf") format("truetype")
+  src: url("../fonts/quicksand/Quicksand-Bold.svg") format("svg")
   font-style: normal
   font-weight: bold
 
 @font-face 
   font-family:"Montserrat" 
-  src: url("../components/fonts/montserrat/Montserrat-Bold.woff") format("woff")
-  src: url("../components/fonts/montserrat/Montserrat-Bold.ttf") format("truetype")
-  src: url("../components/fonts/montserrat/Montserrat-Bold.svg") format("svg")
+  src: url("../fonts/montserrat/Montserrat-Bold.woff") format("woff")
+  src: url("../fonts/montserrat/Montserrat-Bold.ttf") format("truetype")
+  src: url("../fonts/montserrat/Montserrat-Bold.svg") format("svg")
   font-style: normal
   font-weight: bold
 
-  @font-face 
+@font-face 
   font-family:"Montserrat" 
-  src: url("../components/fonts/montserrat/Montserrat-Regular.woff") format("woff")
-  src: url("../components/fonts/montserrat/Montserrat-Regular.ttf") format("truetype")
-  src: url("../components/fonts/montserrat/Montserrat-Regular.svg") format("svg")
+  src: url("../fonts/montserrat/Montserrat-Regular.woff") format("woff")
+  src: url("../fonts/montserrat/Montserrat-Regular.ttf") format("truetype")
+  src: url("../fonts/montserrat/Montserrat-Regular.svg") format("svg")
   font-style: normal
   font-weight: normal
-
  
+//глобальные
+
+
+// UI Kit
+// Colors and type
+@import ../components/color-intro/color-intro.sass
+  
