added colored square,but with no color customization

--- a/src/components/color-intro/color-intro.pug
+++ b/src/components/color-intro/color-intro.pug
@@ -1,4 +1,4 @@
 include __color-block/color-intro__color-block.pug
 
-mixin color-intro(color-mod)
-  +color-block(color-mod)
+mixin color-intro(colormod)
+  +color-block(colormod)
