--- a/src/pages/main.sass
+++ b/src/pages/main.sass
@@ -27,6 +27,6 @@
 
 
 // UI Kit
-// Colors and type
+// все стили компонентов
 @import ../components/color-intro/color-intro.sass
-  
+//@import ./components/*.sass
