--- a/src/components/color-intro/__color-block/color-intro__color-block.pug
+++ b/src/components/color-intro/__color-block/color-intro__color-block.pug
@@ -1,2 +1,2 @@
-mixin color-block(color-mod)
- div(class='color-intro__color-block color-intro__color-block_color-mod') 
+mixin color-block(colormod)
+ div(class='color-intro__color-block ' +  colormod)
