Fixed color customization for square block

--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -11,5 +11,5 @@ html
     include ../components/color-intro/color-intro.pug
     
     h1 Hello, world!
-    +color-intro(color-intro__color-block_dark-shade-5)
+    +color-intro('color-intro__color-block_dark-shade-5')
     
