fixed fonts connection problem, moved on scss synt

--- a/src/components/color-intro/color-intro.pug
+++ b/src/components/color-intro/color-intro.pug
@@ -1,4 +1,6 @@
 include __color-block/color-intro__color-block.pug
+include __label/color-intro__label.pug
 
-mixin color-intro(colormod)
+mixin color-intro(colormod, color, code)
   +color-block(colormod)
+  +label(color, code)
