added color intro block from uikit/colors and types

--- a/src/components/color-intro/color-intro.pug
+++ b/src/components/color-intro/color-intro.pug
@@ -2,5 +2,6 @@ include __color-block/color-intro__color-block.pug
 include __label/color-intro__label.pug
 
 mixin color-intro(colormod, color, code)
-  +color-block(colormod)
-  +label(color, code)
+  .color-intro
+    +color-block(colormod)
+    +label(color, code)
