--- a/src/components/color-intro/color-intro.scss
+++ b/src/components/color-intro/color-intro.scss
@@ -8,3 +8,8 @@
 @import '__color-block/_purple/color-intro__color-block_purple.scss';
 
 @import '__label/color-intro__label.scss';
+
+.color-intro {
+  display: flex;
+  width: 269.26px;  
+}
