--- a/src/components/color-intro/__label/color-intro__label.pug
+++ b/src/components/color-intro/__label/color-intro__label.pug
@@ -1,4 +1,4 @@
 mixin label(color, code)
   .color-intro__label
-    p.color-intro__label_head= color
-    p.color-intro__label_code= code
+    p.color-intro__label.color-intro__label_head= color
+    p.color-intro__label.color-intro__label_code= code
