--- a/src/components/color-intro/__label/color-intro__label.scss
+++ b/src/components/color-intro/__label/color-intro__label.scss
@@ -1,14 +1,16 @@
 .color-intro__label {
-  display: inline-block;
-  vertical-align: middle;
   font-size: 1.1875rem;
-  &_head {
-    font-family: Quicksand, Arial, sans-serif;
+  line-height: 1.8125rem;
+  margin: 0;
+  font-family: Quicksand, Arial, sans-serif;
+  &_head {  
     font-weight: bold;
+    padding-top: 7px;
+    padding-left: 40px;
   }  
   &_code {
-    font-family: Quicksand, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: normal;
+    padding-left: 40px;
   }  
 }
