--- a/src/components/color-intro/__label/color-intro__label.scss
+++ b/src/components/color-intro/__label/color-intro__label.scss
@@ -2,7 +2,7 @@
   font-size: 1.1875rem;
   line-height: 1.8125rem;
   margin: 0;
-  font-family: Quicksand, Arial, sans-serif;
+  font-family: Quicksand, "Open Sans", Arial, sans-serif;
   &_head {  
     font-weight: bold;
     padding-top: 7px;
