--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -9,17 +9,14 @@ html
     link(rel='stylesheet' href='main.scss')
   body
     include ../components/color-intro/color-intro.pug
+    include ../components/text-intro/__text-label/text-intro__text-label.pug
     
     h1 Hello, world!111
     p This is the body text which is used for most of the design, like paragraphs, lists, etc.
     +color-intro('color-intro__color-block_dark-shade-100', 'Dark Shade 100%', '#1F2041')
-    +color-intro('color-intro__color-block_dark-shade-25')
-    +color-intro('color-intro__color-block_dark-shade-50')
-    +color-intro('color-intro__color-block_dark-shade-75')
-    +color-intro('color-intro__color-block_dark-shade-100')
-    +color-intro('color-intro__color-block_green')
-    +color-intro('color-intro__color-block_purple')
 
+
+    +text-intro__text-label({mod: "h1", text: "пример текста"})
 
     
     
