--- a/src/components/text-intro/__text-label/text-intro__text-label.scss
+++ b/src/components/text-intro/__text-label/text-intro__text-label.scss
@@ -2,13 +2,16 @@
   font-family: Montserrat, Arial, sans-serif;;
   font-style: normal;
   font-weight: normal;
-  font-size: 1.1429rem;
+  font-size: 0.875rem;
   line-height: 1.5rem;
   color: rgba(31, 32, 65, 0.75);
+  margin: 0;
+  margin-left: 30px;
   &_h3 {
+    font-family: Montserrat, Arial, sans-serif;
     font-weight: bold;
-    font-size: 1.3333rem;
-    line-height: 1,0667rem;
+    font-size: 0.75rem;
+    line-height: 0.9375rem;
     text-transform: uppercase;
     color: #1F2041;
   }
