--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -8,17 +8,19 @@ html
     title Colors and type
     link(rel='stylesheet' href='main.scss')
   body
+    
     include ../components/color-intro/color-intro.pug
     include ../components/text-intro/text-intro.pug
     
-    h1 Hello, world!111
-    p This is the body text which is used for most of the design, like paragraphs, lists, etc.
-    +color-intro('color-intro__color-block_dark-shade-100', 'Dark Shade 100%', '#1F2041')
+
+    .content
+      
+      +color-intro('color-intro__color-block_dark-shade-100', 'Dark Shade 100%', '#1F2041')
 
 
-    +text-intro({mod: "h1", text: "This one is the sub-section or widget title"})
-    +text-intro({mod: "h2", text: "Next one is the item title inside widgets"})
-    +text-intro({mod: "h3", text: "This is a label or CTA text"})
-    +text-intro({mod: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})
-    
+      +text-intro({mod: "h1", text: "This one is the sub-section or widget title"})
+      +text-intro({mod: "h2", text: "Next one is the item title inside widgets"})
+      +text-intro({mod: "h3", text: "This is a label or CTA text"})
+      +text-intro({mod: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})  
+      
     
