--- a/src/pages/global.scss
+++ b/src/pages/global.scss
@@ -1,5 +1,7 @@
 html {
   background-color: white;
-  font-family: Quicksand, 'Open Sans' Arial, sans-serif;
+  font-family: Montserrat, Arial, sans-serif;
   font-size: 16px;
+  font-style: normal;
+  font-weight: normal;
 }
