added text-field from form elements

--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,2 +1,2 @@
 mixin text-field(options)
-  input(class='text-field text-field_focused-hovered', type= options.type, placeholder= options.placeholder)
+  input(class='text-field', type= options.type, placeholder= options.placeholder)
