--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -9,7 +9,6 @@ html
     title Form Elements
     link(rel='stylesheet' href='form-elements.scss')
   body
-    p Текст пример Example
     +text-field({type: "text",
-                 placeholder: "This is pretty awesome" 
+                 placeholder: "Email" 
                 })
