--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -9,21 +9,17 @@
   box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 14px 12px 14px;
+
   &::placeholder {
     color: rgba(31, 32, 65, 0.25);
-    line-height: 1.125rem;
-    
-  }
-  &:hover,&:focus {
-    border: 1px solid rgba(31, 32, 65, 0.5);
-  }
-  &_focused-hovered {
-    border: 1px solid rgba(31, 32, 65, 0.5);
-    padding: 11px 14px 7px 14px;
-    line-height: 1.5rem;
-    &::placeholder {
-      color: rgba(31, 32, 65, 0.75);
-    }
   }
 
+  &:hover,
+  &:focus {
+    border: 1px solid rgba(31, 32, 65, 0.5);
+  }
+  // Модификатор для фокуса/ховера, возможно сделаю в стилях контейнера
+  //&_focused-hovered {
+  //  border: 1px solid rgba(31, 32, 65, 0.5);
+  //}
 }
