--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -1,3 +1,4 @@
 @import 'global.scss';
 @import 'fonts.scss';
 @import '../components/text-field/text-field.scss';
+@import '../components/checkbox-button/checkbox-button.scss';
