--- a/src/components/checkbox-button/checkbox-button.pug
+++ b/src/components/checkbox-button/checkbox-button.pug
@@ -1,6 +1,6 @@
 mixin checkbox-button(options)
   -var checkLabel = options.label
-  .checkbox_input
-    input(type='checkbox', name=options.name, value=options.value)
-    |#{checkLabel}
-  
+  .checkbox-button
+    label
+      input(class='checkbox-button__input', type='checkbox', name=options.name, value=options.value)
+      span(class='checkbox-button__title') #{checkLabel}
