--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -13,4 +13,6 @@ html
     +text-field({type: "text",
                  placeholder: "Email" 
                 })
-    +checkbox-button({name: "check1", value: "smoking", label: 'курение разрешено'})               
+    +checkbox-button({name: "check1", value: "smoking", label: 'Можно курить'})
+    +checkbox-button({name: "check1", value: "smoking", label: 'Можно с питомцами'})
+    +checkbox-button({name: "check1", value: "smoking", label: 'Можно пригласить гостей (до 10 человек)'})
