--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -13,6 +13,10 @@ html
     +text-field({type: "text",
                  placeholder: "Email" 
                 })
-    +checkbox-button({name: "check1", value: "smoking", label: 'Можно курить'})
-    +checkbox-button({name: "check1", value: "smoking", label: 'Можно с питомцами'})
+    +checkbox-button({name: "check1",
+                      value: "smoking",
+                      label: 'Широкий коридор',
+                      isRich: 'true',
+                      desc: 'Ширина коридоров в номере не менее 91 см.'})
     +checkbox-button({name: "check1", value: "smoking", label: 'Можно пригласить гостей (до 10 человек)'})
+    +checkbox-button({name: "check1", value: "smoking", label: 'помощник для инвалидов', desc: 'На 1 этаже вас встретит специалист и проводит до номера'})
