--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -1,5 +1,5 @@
 include ../components/text-field/text-field.pug
-include ../components/checkbox-button/checkbox-button.pug
+include ../components/checkbox-buttons/checkbox-buttons.pug
 doctype
 html
   head
@@ -10,13 +10,4 @@ html
     title Form Elements
     link(rel='stylesheet' href='form-elements.scss')
   body
-    +text-field({type: "text",
-                 placeholder: "Email" 
-                })
-    +checkbox-button({name: "check1",
-                      value: "smoking",
-                      label: 'Широкий коридор',
-                      isRich: 'true',
-                      desc: 'Ширина коридоров в номере не менее 91 см.'})
-    +checkbox-button({name: "check1", value: "smoking", label: 'Можно пригласить гостей (до 10 человек)'})
-    +checkbox-button({name: "check1", value: "smoking", label: 'помощник для инвалидов', desc: 'На 1 этаже вас встретит специалист и проводит до номера'})
+    +checkboxButtons()
