added rich checkbox buttons

--- a/src/components/checkbox-button/checkbox-button.scss
+++ b/src/components/checkbox-button/checkbox-button.scss
@@ -16,6 +16,7 @@
 //подпись rich checkbox
 .checkbox-button__title_rich {
   font-weight: bold;
+  color: rgba(31, 32, 65, 0.75);
 }
 
 //описание для rich checkbox
