--- a/src/components/checkbox-buttons/checkbox-buttons.scss
+++ b/src/components/checkbox-buttons/checkbox-buttons.scss
@@ -13,3 +13,17 @@
     margin-bottom: 16.56px;
   }
 }
+
+.rich-checkbox-buttons {
+  width: 100%;
+
+  &__title {
+    font-family: Montserrat, Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    color: #1F2041;
+    margin-bottom: 16px;
+  }
+}
