started bullet list

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -1,5 +1,6 @@
 include ../components/text-field/text-field.pug
 include ../components/checkbox-buttons/checkbox-buttons.pug
+include ../components/bullet-list/bullet-list.pug
 doctype
 html
   head
@@ -12,3 +13,4 @@ html
   body
     +checkboxButtons()
     +richCheckboxButtons()
+    +bulletList
