--- a/src/pages/global.scss
+++ b/src/pages/global.scss
@@ -5,3 +5,12 @@ html {
   font-style: normal;
   font-weight: normal;
 }
+
+body {
+  font-family: Montserrat, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
+}
