--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -2,3 +2,4 @@
 @import 'fonts.scss';
 @import '../components/text-field/text-field.scss';
 @import '../components/checkbox-buttons/checkbox-buttons.scss';
+@import '../components/bullet-list/bullet-list.scss';
