--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -3,3 +3,4 @@
 @import '../components/text-field/text-field.scss';
 @import '../components/checkbox-buttons/checkbox-buttons.scss';
 @import '../components/bullet-list/bullet-list.scss';
+@import '../components/radio/radio.scss';
