--- a/src/components/radio/radio.pug
+++ b/src/components/radio/radio.pug
@@ -1,7 +1,10 @@
 mixin radio(options)
   .radio
-    label
-      input(class='radio__input', type='radio', name='radio', value='male')
-      span Мужчина
-      input(class='radio__input', type='radio', name='radio', value='female')
-      span Женщина
+    label.radio__label
+      .radio__input-wrapper
+        input(class='radio__input', type='radio', name='radio', value='male')
+        span Мужчина
+    label.radio__label
+      .radio__input-wrapper
+        input(class='radio__input', type='radio', name='radio', value='female')
+        span Женщина
