ref radio buttons
changed selectors from tags to classes

--- a/src/components/radio/radio.pug
+++ b/src/components/radio/radio.pug
@@ -3,8 +3,8 @@ mixin radio(options)
     label.radio__label
       .radio__input-wrapper
         input(class='radio__input', type='radio', name='radio', value='male')
-        span Мужчина
+        span.radio__title Мужчина
     label.radio__label
       .radio__input-wrapper
         input(class='radio__input', type='radio', name='radio', value='female')
-        span Женщина
+        span.radio__title Женщина
