ref checkbox button
changet selectors form tag to class if possible

--- a/src/components/checkbox-button/checkbox-button.pug
+++ b/src/components/checkbox-button/checkbox-button.pug
@@ -4,7 +4,7 @@ mixin checkbox-button(options)
     var rich = options.isRich
     checkTitleClass += rich == "true" ? " checkbox-button__title_rich" : ""
   .checkbox-button
-    label
+    label.checkbox-button__label
       input(class='checkbox-button__input', type='checkbox', name=options.name, value=options.value)
       span(class=checkTitleClass) #{options.label}
       case rich
