--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -4,3 +4,4 @@
 @import '../components/checkbox-buttons/checkbox-buttons.scss';
 @import '../components/bullet-list/bullet-list.scss';
 @import '../components/radio/radio.scss';
+@import '../components/toggle/toggle.scss';
