added material icons font

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -19,3 +19,5 @@ html
     +radio({name: 'test2'})
     +radio({name: 'test3'})
     +toggle({name: 'offer'})
+
+    <i class="material-icons">home</i>
