--- a/src/pages/fonts.scss
+++ b/src/pages/fonts.scss
@@ -1,14 +1,14 @@
 @font-face {
-  font-family:'Quicksand';
+  font-family: 'Quicksand';
   src: url('../fonts/quicksand/Quicksand-Regular.woff') format('woff'),
     url('../fonts/quicksand/Quicksand-Regular.ttf') format('truetype'),
     url('../fonts/quicksand/Quicksand-Regular.svg#Quicksand-Regular') format('svg');
   font-style: normal;
   font-weight: normal;
 }
-  
+
 @font-face {
-  font-family:'Quicksand';
+  font-family: 'Quicksand';
   src: url('../fonts/quicksand/Quicksand-Bold.woff') format('woff'),
     url('../fonts/quicksand/Quicksand-Bold.ttf') format('truetype'),
     url('../fonts/quicksand/Quicksand-Bold.svg#Quicksand-Bold') format('svg');
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family:'Montserrat';
+  font-family: 'Montserrat';
   src: url('../fonts/montserrat/Montserrat-Regular.woff') format('woff'),
     url('../fonts/montserrat/Montserrat-Regular.ttf') format('truetype'),
     url('../fonts/montserrat/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family:'Montserrat';
+  font-family: 'Montserrat';
   src: url('../fonts/montserrat/Montserrat-Bold.woff') format('woff'),
     url('../fonts/montserrat/Montserrat-Bold.ttf') format('truetype'),
     url('../fonts/montserrat/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
@@ -35,10 +35,45 @@
 }
 
 @font-face {
-  font-family:'Open Sans';
+  font-family: 'Open Sans';
   src: url('../fonts/open sans/OpenSans-Bold.woff') format('woff'),
     url('../fonts/open sans/OpenSans-Bold.ttf') format('truetype'),
     url('../fonts/open sans/OpenSans-Bold.svg#OpenSans-Bold') format('svg');
   font-style: normal;
   font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/material icons/MaterialIcons-Regular.woff') format('woff'),
+    url('../fonts/material icons/MaterialIcons-Regular.ttf') format('truetype'),
+    url('../fonts/material icons/MaterialIcons-Regular.svg#MaterialIcons-Regular') format('svg');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
 }
