--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -5,3 +5,4 @@
 @import '../components/bullet-list/bullet-list.scss';
 @import '../components/radio/radio.scss';
 @import '../components/toggle/toggle.scss';
+@import '../components/rate-button/rate-button.scss';
