added common styles dir
added dir for common sccs files: fonts, global, normalize, variables, mixins

--- a/src/pages/colors-and-type.scss
+++ b/src/pages/colors-and-type.scss
@@ -1,6 +1,6 @@
-@import 'normalize.scss';
-@import 'global.scss';
-@import 'fonts.scss';
+@import 'common/normalize.scss';
+@import 'common/global.scss';
+@import 'common/fonts.scss';
 @import '../components/content-uikit/content-uikit.scss';
 @import '../components/color-intro/color-intro.scss';
 @import '../components/text-intro/text-intro.scss';
