--- a/src/pages/colors-and-type.scss
+++ b/src/pages/colors-and-type.scss
@@ -1,4 +1,5 @@
 @import 'common/normalize.scss';
+@import 'common/variables.scss';
 @import 'common/global.scss';
 @import 'common/fonts.scss';
 @import '../components/content-uikit/content-uikit.scss';
