--- a/src/pages/common/variables.scss
+++ b/src/pages/common/variables.scss
@@ -5,3 +5,13 @@ $dark25: rgba(31, 32, 65, 0.25);
 $dark5: rgba(31, 32, 65, 0.05);
 $purple: #BC9CFF;
 $green: #6FCF97;
+$purple-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+$green-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+
+$montserrat: Montserrat,
+Arial,
+sans-serif;
+$quicksand: Quicksand,
+'Open Sans',
+Arial,
+sans-serif;
