ref bullet list
added classes to list items, positions fixed

--- a/src/components/bullet-list/bullet-list.pug
+++ b/src/components/bullet-list/bullet-list.pug
@@ -1,7 +1,7 @@
 mixin bulletList
   .bullet-list
-  p(class="bullet-list__title") bullet list
-  ul(class="bullet-list__list")
-    li Нельзя с питомцами
-    li Без вечеринок и мероприятий
-    li Время прибытия — после 13:00, а выезд до 12:00
+    p.bullet-list__title bullet list
+    ul.bullet-list__list
+      li.bullet-list__item Нельзя с питомцами
+      li.bullet-list__item Без вечеринок и мероприятий
+      li.bullet-list__item Время прибытия — после 13:00, а выезд до 12:00
