--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -1,4 +1,6 @@
 .bullet-list {
+  width: 292px;
+
   &__title {
     text-transform: uppercase;
     font-style: normal;
@@ -6,8 +8,7 @@
     font-size: 12px;
     text-transform: uppercase;
     color: #1f2041;
-    margin-bottom: 8px;
-    margin-top: 0;
+    margin-bottom: 17px;
   }
 
   &__list {
@@ -15,22 +16,26 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    li {
-      padding-left: 20.86px;
-      position: relative;
-    }
-    li:nth-child(n + 2) {
-      margin-top: 10px;
-    }
-    li:before {
-      content: "";
-      position: absolute;
-      top: 7px;
-      left: 0;
-      height: 10px;
-      width: 10.43px;
-      border-radius: 50%;
-      background: rgba(31, 32, 65, 0.25);
-    }
   }
+
+  &__item {
+    padding-left: 20.86px;
+    position: relative;
+  }
+
+  &__item:nth-child(n + 2) {
+    margin-top: 18px;
+  }
+
+  &__item:before {
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 0;
+    height: 10px;
+    width: 10.43px;
+    border-radius: 50%;
+    background: $dark25;
+  }
+
 }
