ref global styles
added lineheight

--- a/src/pages/common/global.scss
+++ b/src/pages/common/global.scss
@@ -11,6 +11,7 @@ body {
   font-style: normal;
   font-weight: normal;
   font-size: 0.875rem;
+  line-height: 1.5rem;
   color: $dark75;
 }
 
@@ -19,6 +20,7 @@ h1 {
   font-style: normal;
   font-weight: bold;
   font-size: 1.5rem;
+  line-height: 1.875rem;
   color: $dark100;
 }
 
@@ -27,6 +29,7 @@ h2 {
   font-style: normal;
   font-weight: bold;
   font-size: 1.1875rem;
+  line-height: 1.5rem;
   color: $dark100;
 }
 
@@ -35,6 +38,7 @@ h3 {
   font-style: normal;
   font-weight: bold;
   font-size: 0.75rem;
+  line-height: 0.9375rem;
   color: $montserrat;
   text-transform: uppercase;
 }
