added font variable for global styles

--- a/src/pages/common/global.scss
+++ b/src/pages/common/global.scss
@@ -1,6 +1,6 @@
 html {
   background-color: white;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: $montserrat;
   font-size: 16px;
   font-style: normal;
   font-weight: normal;
