--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -1,14 +1,14 @@
 .bullet-list {
-  width: 292px;
+  width: 100%;
+  max-width: 18.25rem;
 
   &__title {
     text-transform: uppercase;
     font-style: normal;
     font-weight: bold;
-    font-size: 12px;
-    text-transform: uppercase;
+    font-size: 0.75rem;
     color: #1f2041;
-    margin-bottom: 17px;
+    margin-bottom: 0.5rem;
   }
 
   &__list {
@@ -19,23 +19,22 @@
   }
 
   &__item {
-    padding-left: 20.86px;
+    padding-left: 1.3038rem;
     position: relative;
   }
 
   &__item:nth-child(n + 2) {
-    margin-top: 18px;
+    margin-top: 0.625rem;
   }
 
   &__item:before {
     content: "";
     position: absolute;
-    top: 3px;
+    top: 0.4375rem;
     left: 0;
-    height: 10px;
-    width: 10.43px;
+    height: 0.625rem;
+    width: 0.6519rem;
     border-radius: 50%;
     background: $dark25;
   }
-
 }
