--- a/src/components/checkbox-button/checkbox-button.scss
+++ b/src/components/checkbox-button/checkbox-button.scss
@@ -1,6 +1,6 @@
 .checkbox-button {
-  max-width: 266px;
-  margin-top: 10px;
+  max-width: 16.625rem;
+  width: 100%;
 
   //подпись
   &__title {
@@ -21,9 +21,9 @@
   //описание для rich checkbox
   &__desc {
     position: relative;
-    padding-left: 30px;
+    padding-left: 1.875rem;
     cursor: pointer;
-    margin-top: 5px;
+    margin-top: 0.3125rem;
     font-family: Montserrat, Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -44,7 +44,7 @@
   &__input:not(:checked)+span {
     display: inline-block;
     position: relative;
-    padding-left: 30px;
+    padding-left: 1.875rem;
     cursor: pointer;
   }
 
@@ -55,12 +55,12 @@
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     border: 1px solid rgba(31, 32, 65, 0.25);
     background-color: #ffffff;
     box-sizing: border-box;
-    border-radius: 4px;
+    border-radius: 0.25rem;
   }
 
   //рамка чекбокса при нажатии
@@ -73,10 +73,10 @@
   &__input:not(:checked)+span:after {
     content: "";
     position: absolute;
-    left: 6px;
-    top: 6px;
-    width: 6px;
-    height: 4px;
+    left: 0.375rem;
+    top: 0.375rem;
+    width: 0.375rem;
+    height: 0.25rem;
     border-radius: 1px;
     border-left: 2px solid #BC9CFF;
     border-bottom: 2px solid #BC9CFF;
