--- a/src/components/checkbox-button/checkbox-button.scss
+++ b/src/components/checkbox-button/checkbox-button.scss
@@ -4,12 +4,12 @@
 
   //подпись
   &__title {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 0.875rem;
     line-height: 1.125rem;
-    color: rgba(31, 32, 65, 0.5);
+    color: $dark50;
 
     //подпись rich checkbox
     &_rich {
@@ -24,12 +24,12 @@
     padding-left: 1.875rem;
     cursor: pointer;
     margin-top: 0.3125rem;
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $montserrat;
     font-style: normal;
     font-weight: normal;
     font-size: 0.75rem;
     line-height: 0.875rem;
-    color: rgba(31, 32, 65, 0.5);
+    color: $dark50;
   }
 
   //скрытие стандартного чекбокса
