--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -8,7 +8,7 @@
     font-style: normal;
     font-weight: bold;
     font-size: 0.75rem;
-    color: #1f2041;
+    color: $dark100;
     margin-bottom: 0.5rem;
   }
 
