--- a/src/components/text-intro/__text-tag/text-intro__text-tag.scss
+++ b/src/components/text-intro/__text-tag/text-intro__text-tag.scss
@@ -4,7 +4,7 @@
   font-weight: normal;
   font-size: 0.875rem;
   line-height: 1.5rem;
-  color: rgba(31, 32, 65, 0.25);
+  color: $dark25;
   margin: 0;
   text-align: right;
   &_h3 {
