--- a/src/components/checkbox-buttons/checkbox-buttons.scss
+++ b/src/components/checkbox-buttons/checkbox-buttons.scss
@@ -10,7 +10,7 @@
     font-weight: bold;
     font-size: 0.75rem;
     text-transform: uppercase;
-    color: #1F2041;
+    color: $dark100;
     margin-bottom: 1.035rem;
   }
 }
@@ -25,7 +25,7 @@
     font-weight: bold;
     font-size: 0.75rem;
     text-transform: uppercase;
-    color: #1F2041;
+    color: $dark100;
     margin-bottom: 1.035rem;
   }
 }
