--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -3,7 +3,7 @@
   height: 24px;
 
   &__star {
-    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    background: $purple-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
