--- a/src/components/text-intro/__text-label/text-intro__text-label.scss
+++ b/src/components/text-intro/__text-label/text-intro__text-label.scss
@@ -4,7 +4,7 @@
   font-weight: normal;
   font-size: 0.875rem;
   line-height: 1.5rem;
-  color: rgba(31, 32, 65, 0.75);
+  color: $dark75;
   margin: 0;
   margin-left: 30px;
   &_h3 {
@@ -13,20 +13,20 @@
     font-size: 0.75rem;
     line-height: 0.9375rem;
     text-transform: uppercase;
-    color: #1F2041;
+    color: $dark100;
   }
   &_h2 {
     font-family: Quicksand, 'Open Sans', Arial, sans-serif;
     font-weight: bold;
     font-size: 1.1875rem;
     line-height: 1.5rem;
-    color: #1F2041;
+    color: $dark100;
   }
   &_h1 {
     font-family: Quicksand, 'Open Sans', Arial, sans-serif;
     font-weight: bold;
     font-size: 1.5rem;
     line-height: 1.875rem;
-    color: #1F2041;
+    color: $dark100;
   }
 }
