--- a/src/components/checkbox-buttons/checkbox-buttons.scss
+++ b/src/components/checkbox-buttons/checkbox-buttons.scss
@@ -5,7 +5,7 @@
   max-width: 16.625rem;
 
   &__title {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 0.75rem;
@@ -20,7 +20,7 @@
   max-width: 16.625rem;
 
   &__title {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $montserrat;
     font-style: normal;
     font-weight: bold;
     font-size: 0.75rem;
