--- a/src/components/text-field/text-field.scss
+++ b/src/components/text-field/text-field.scss
@@ -1,6 +1,6 @@
 .text-field {
   min-width: 320px;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: $montserrat;
   font-size: 0.875rem;
   line-height: 1.125rem;
   vertical-align: top;
@@ -18,6 +18,7 @@
   &:focus {
     border: 1px solid $dark50;
   }
+
   // Модификатор для фокуса/ховера, возможно сделаю в стилях контейнера
   //&_focused-hovered {
   //  border: 1px solid $dark50;
