--- a/src/components/text-intro/__text-label/text-intro__text-label.scss
+++ b/src/components/text-intro/__text-label/text-intro__text-label.scss
@@ -1,5 +1,6 @@
 .text-intro__text-label {
-  font-family: Montserrat, Arial, sans-serif;;
+  font-family: $montserrat;
+  ;
   font-style: normal;
   font-weight: normal;
   font-size: 0.875rem;
@@ -7,23 +8,26 @@
   color: $dark75;
   margin: 0;
   margin-left: 30px;
+
   &_h3 {
-    font-family: Montserrat, Arial, sans-serif;
+    font-family: $montserrat;
     font-weight: bold;
     font-size: 0.75rem;
     line-height: 0.9375rem;
     text-transform: uppercase;
     color: $dark100;
   }
+
   &_h2 {
-    font-family: Quicksand, 'Open Sans', Arial, sans-serif;
+    font-family: $quicksand;
     font-weight: bold;
     font-size: 1.1875rem;
     line-height: 1.5rem;
     color: $dark100;
   }
+
   &_h1 {
-    font-family: Quicksand, 'Open Sans', Arial, sans-serif;
+    font-family: $quicksand;
     font-weight: bold;
     font-size: 1.5rem;
     line-height: 1.875rem;
