ref rate button: prefix fixed

--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -5,6 +5,7 @@
   &__star {
     background: $purple-gradient;
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
   }
 }
